Added form submit to form on about page

--- a/about.html
+++ b/about.html
@@ -218,10 +218,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 mx-auto my-4 p-3">
-                    <form action="#" method="get">
+                    <form action="https://formsubmit.co/22b49344ab0e4da22d3c4105f1f68b87" method="post">
                         <h1 class="h2 text-center">Book a date with us</h1>
                         <div class="input-group py-3">
-
                             <input name="email" type="text"
                                 class="form-control form-control-lg rounded-pill rounded-end" id="email"
                                 placeholder="Your Email" aria-label="Your Email">
