--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <h1
                                     class="banner-heading h1 text-primary display-3 mb-0 pb-5 mx-0 px-0 light-300 typo-space-line">
                                     Develop <strong>Digital Strategies</strong> for
-                                    <br>your business
+                                    your business
                                 </h1>
                                 <p class="banner-body text-dark py-3 mx-0 px-0">
                                     At Yohanan Consult, we work with you to develop and execute bespoke <strong>Digital
@@ -145,24 +145,24 @@
 
 
     <!-- Start Service -->
-    <section class="service-wrapper py-3">
+    <section class="service-wrapper py-3 bg-secondary">
         <div class="container-fluid pb-3">
             <div class="row">
-                <h2 class="h2 text-center col-12 py-5 semi-bold-600">Services</h2>
+                <h2 class="h2 text-center col-12 py-5 semi-bold-600 text-white">Services</h2>
                 <div class="service-header col-2 col-lg-3 text-end light-300">
                     <i class='bx bx-gift h3 mt-1'></i>
                 </div>
-                <div class="service-heading col-10 col-lg-9 text-start float-end light-300">
+                <div class="service-heading col-10 col-lg-9 text-start float-end light-300 text-white">
                     <h2 class="h3 pb-4 typo-space-line"><b>Innovative</b> and <strong>Scalable</strong> Solutions</h2>
                 </div>
             </div>
-            <p class="service-footer col-10 offset-2 col-lg-9 offset-lg-3 text-start pb-3 text-muted px-2">
+            <p class="service-footer col-10 offset-2 col-lg-9 offset-lg-3 text-start pb-3 text-white px-2">
                 Yohanan Consult always strive to give clients the best solutions to their needs. We use technology to
                 provide
                 innovative solutions that are scalable thereby giving clients a good return for their investments.
             </p>
             <p class="service-footer col-10 offset-2 col-lg-9 offset-lg-3 text-start pb-3 text-muted px-2">
-                <a class="banner-button btn rounded-pill btn-outline-primary btn-lg px-4" href="/contact.html"
+                <a class="banner-button btn rounded-pill btn-outline-light btn-lg px-4" href="/contact.html"
                     role="button">Contact Us</a>
             </p>
         </div>
