CHORE Added Sam's Pic

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                     </p>
                 </div>
                 <div class="col-lg-6">
-                    <img src="./assets/img/banner-img-02.svg">
+                    <img src="./assets/img/banner-img-02.svg" loading="lazy" alt="banner">
                 </div>
             </div>
         </div>
@@ -91,7 +91,7 @@
             <div class="col-lg-9 row">
                 <div class="team-member col-md-4">
                     <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/ceo-1.png"
-                        alt="Card image">
+                        alt="Card image" loading="lazy">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                         <li>Elton John Myers</li>
                         <li>CEO & Developer</li>
@@ -99,15 +99,15 @@
                 </div>
                 <div class="team-member col-md-4">
                     <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/social-media.jpg"
-                        alt="Card image">
+                        alt="Card image" loading="lazy">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                         <li>Jane Doe</li>
                         <li>Social Media</li>
                     </ul>
                 </div>
                 <div class="team-member col-md-4">
-                    <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/hardware.jpg"
-                        alt="Card image">
+                    <img class="team-member-img img-fluid rounded-circle p-4" src="./assets/img/sam.jpeg"
+                        alt="Card image" loading="lazy">
                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                         <li>Samuel Tei Mensah Ayertey</li>
                         <li>Hardware & Network</li>
