--- a/work.html
+++ b/work.html
@@ -12,7 +12,7 @@
     <!-- Font CSS -->
     <link href="assets/css/boxicon.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
-    <!-- Load Tempalte CSS -->
+    <!-- Load custom CSS -->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/custom.css">
