--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                     </p>
                 </div>
                 <div class="contact-img col-lg-5 align-items-end col-md-4">
-                    <img src="./assets/img/banner-img-01.svg">
+                    <img src="./assets/img/banner-img-01.svg" loading="lazy" alt="contact banner">
                 </div>
             </div>
         </div>
