--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
                 <div class="col-lg-7 col-12 text-light pt-2">
                     <h3 class="h4 light-300">Great transformations successful</h3>
-                    <p class="light-300">Quis ipsum suspendisse ultrices gravida.</p>
+                    <p class="light-300">Some text here.</p>
                 </div>
                 <div class="col-lg-3 col-12 pt-4">
                     <a href="#" class="btn btn-primary rounded-pill btn-block shadow px-4 py-2">View Our Work</a>
