CHORE fixed unused imports

--- a/work.html
+++ b/work.html
@@ -356,7 +356,7 @@
     <!-- Lightbox -->
     <script src="assets/js/fslightbox.js"></script>
     <script>
-        fsLightboxInstances['gallery'].props.loadOnlyCurrentSource = true;
+        // fsLightboxInstances['gallery'].props.loadOnlyCurrentSource = true;
     </script>
     <!-- Load jQuery require for isotope -->
     <script src="assets/js/jquery.min.js"></script>
