--- a/about/about-firm-foundation.html
+++ b/about/about-firm-foundation.html
@@ -52,10 +52,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="../index.html">
-                    <img src="../img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -78,7 +78,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="../index.html" class="navbar-brand d-lg-none">
-                    <h1 class="fw-bold m-0">Firm Foundation LLC</h1>
+                    <img src="../img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -190,9 +190,11 @@
     <!-- About End -->
 
 
-    <!-- Features Start -->
-    <div class="container-fluid pt-6 pb-6">
+   
+    <!-- Our Hallmark Start -->
+    <div class="container-fluid pt-6 pb-6 bg-grey">
         <div class="container pt-4">
+            <h1 class="display-6 text-uppercase mb-5 text-center">Our Hallmark</h1>
             <div class="row g-0 feature-row wow fadeIn" data-wow-delay="0.1s">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="feature-item border h-100">
@@ -201,18 +203,25 @@
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase mb-3">Holistic Approach</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
+                            <p>
+                                We believe that true wellness extends beyond treating symptoms. 
+                                Our philosophy is rooted in a holistic approach, which views each patient as a whole person
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.4s">
+                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="feature-item border h-100">
                         <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
                             <i class="fa fa-dollar-sign fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Clear Pricing</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
+                            <p>
+                                We believe that a strong patient-provider relationship is built on trust and a 
+                                critical part of that trust is financial clarity. We are committed to offering 
+                                a clear and transparent pricing model that empowers you to make informed decisions about your health.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -223,73 +232,92 @@
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Quality Care</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
+                            <p>
+                                It is our unwavering commitment to providing the highest standard of medical excellence, 
+                                ensuring the safety and effectiveness of every patient's experience. Our approach to 
+                                quality care is built on a foundation of medically recognized principles and a 
+                                constant drive for improvement.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.6s">
+                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <div class="feature-item border h-100">
                         <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
                             <i class="fa fa-user-md fa-2x text-white"></i>
                         </div>
                         <div class="p-5 pt-0">
                             <h5 class="text-uppercase">Reliable Support</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
+                            <p>
+                                We understand that a patient's trust is our most valuable asset. That's why 
+                                we have dedicated ourselves to providing a system of reliable support — a commitment to 
+                                consistency, accuracy and dependability that permeates every aspect of our care.
+                            </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Features End -->
+    <!-- Our Hallmark End -->
 
     <!-- Why Choose Us Start -->
-    <div class="container-fluid feature mt-6 mb-6 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid feature py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <div class="row g-0 justify-content-end">
-                <div class="col-lg-6 pt-5">
-                    <div class="mt-5">
+                <div class="col-lg-12 pt-5">
+                    <div class="mt-1">
                         <h1 class="display-6 text-white text-uppercase mb-4 wow fadeIn" data-wow-delay="0.3s">
                             Why You should Choose Firm Foundation LLC
                         </h1>
-                        <p class="text-light mb-4 wow fadeIn" data-wow-delay="0.4s">Lorem ipsum dolor sit amet,
-                            consectetur adipiscing elit. Curabitur tellus augue, iaculis id elit eget, ultrices pulvinar
-                            tortor. Quisque vel lorem porttitor, malesuada arcu quis, fringilla risus. Pellentesque eu
-                            consequat augue.</p>
+                        <p class="text-light mb-4 wow fadeIn" data-wow-delay="0.4s">
+                            Choosing a healthcare provider is one of the most important decisions you can make for yourself 
+                            and your family. At Firm Foundation LLC, we offer a distinctive approach to health and wellness 
+                            that sets us apart. We believe in building a lasting partnership with our patients, providing 
+                            not just medical treatment but a comprehensive and compassionate system of care designed for 
+                            your long-term well-being.
+                        </p>
                         <div class="row g-4 pt-2 mb-4">
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <h1 class="text-white" data-toggle="counter-up">15</h1>
-                                    <p class="text-white text-uppercase mb-0">Years of Experience</p>
+                                    <h1 class="text-white">Convenient and Accessible Services</h1>
+                                    <p class="text-white text-uppercase mb-0">
+                                        We strive to make healthcare accessible for everyone. We offer flexible scheduling, 
+                                        streamlined administrative processes and a commitment to providing timely and 
+                                        efficient care, so you can get the help you need without unnecessary stress or delay.
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                 <div class="flex-column text-center border border-5 border-primary p-5">
-                                    <h1 class="text-white" data-toggle="counter-up">50</h1>
-                                    <p class="text-white text-uppercase mb-0">Satisfied Patients(Over)</p>
+                                    <h1 class="text-white">Expert and Compassionate Staff</h1>
+                                    <p class="text-white text-uppercase mb-0">
+                                        Our team of healthcare professionals is highly skilled, experienced and dedicated to 
+                                        providing the highest quality of care. We combine our expertise with genuine empathy, 
+                                        creating a welcoming and supportive environment where you feel safe and understood.
+                                    </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="border border-5 border-primary border-bottom-0 p-5">
-                            <div class="experience mb-4 wow fadeIn" data-wow-delay="0.6s">
-                                <div class="d-flex justify-content-between mb-2">
-                                    <span class="text-white text-uppercase">Experience</span>
-                                    <!-- <span class="text-white">90%</span> -->
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.4s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h1 class="text-white">A Focus on Preventive Wellness</h1>
+                                    <p class="text-white text-uppercase mb-0">
+                                        We believe in proactive healthcare that emphasizes prevention and wellness. 
+                                        Our services are designed to help you maintain optimal health, manage chronic conditions 
+                                        and prevent illness before it starts.
+                                    </p>
                                 </div>
-                                <!-- <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90"
-                                        aria-valuemin="0" aria-valuemax="100"></div>
-                                </div> -->
                             </div>
-                            <div class="experience wow fadeIn" data-wow-delay="0.7s">
-                                <div class="d-flex justify-content-between mb-2">
-                                    <span class="text-white text-uppercase">Patients Treated</span>
-                                    <!-- <span class="text-white">95%</span> -->
+                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
+                                <div class="flex-column text-center border border-5 border-primary p-5">
+                                    <h1 class="text-white">Patient-Centered Care</h1>
+                                    <p class="text-white text-uppercase mb-0">
+                                        At Firm Foundation LLC, we put you at the center of everything we do. 
+                                        We listen to your concerns, respect your preferences and involve you in every step of 
+                                        your care journey. Our goal is to empower you with the knowledge and support you need to 
+                                        make informed decisions about your health.
+                                    </p>
                                 </div>
-                                <!-- <div class="progress">
-                                    <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95"
-                                        aria-valuemin="0" aria-valuemax="100"></div>
-                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -306,7 +334,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
