--- a/about/our-team.html
+++ b/about/our-team.html
@@ -52,10 +52,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="../index.html">
-                    <img src="../img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -78,7 +78,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="../index.html" class="navbar-brand d-lg-none">
-                    <h1 class="fw-bold m-0">Firm Foundation LLC</h1>
+                    <img src="../img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -90,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="#" class="dropdown-item">Our Team</a>
+                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link">Services</a>
@@ -139,24 +139,50 @@
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="../img/team/doctor.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team/Dr-Amoako.jpg" alt="">
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Dr. Agyenim Amoako</h5>
                             <span>Co-Founder / MD</span><br>
-                            <a class="btn btn-primary rounded-pill py-2 px-3 mt-2" href="">Read More</a>
+                        </div>
+                        <div class="text-center p-4">
+                            <p>
+                                Dr. Amoako is a highly skilled physician with a background in Biology and Chemistry from
+                                Delaware State University and a medical degree from Ross University School of Medicine, who
+                                brings over a decade of hands-on experience in primary and occupational healthcare. Completing
+                                his Family Medicine Residency at the University of Arkansas for Medical Sciences, Dr. Amoako
+                                has dedicated the past 10 years to serving as a primary care and occupational medicine provider
+                                at Mountaire Health and Wellness Center, a facility owned by Mountaire Delmarva Chicken
+                                Farms. In this role, he has provided critical healthcare services to employees and their families,
+                                addressing both preventive and acute medical needs, reducing workplace health risks, and
+                                improving overall employee well-being. His extensive experience in family medicine, coupled
+                                with his deep understanding of occupational health, ensures a strong foundation for delivering
+                                high-quality, community-centered medical care.
+                        
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="../img/team/social-worker.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team/Patience.jpg" alt="" style="height: 100%;">
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-1">Patience Agbevialdey</h5>
                             <span>Co-Founder / Clinical Social Worker</span><br>
-                            <a class="btn btn-primary rounded-pill py-2 px-3 mt-2" href="">Read More</a>
+                        </div>
+                        <div class="text-center p-4">
+                            <p>
+                                Patience Agbeviadey, a Licensed Clinical Social Worker (LCSW) with over 15 years of
+                                experience in substance use treatment and mental health, complements Dr. Amoako's medical
+                                expertise with a strong behavioral health focus. Holding a degree in Psychology and a Master's
+                                in Social Work from Delaware State University, she has worked extensively with individuals
+                                struggling with addiction, mental health challenges, and social determinants of health. Her
+                                expertise in developing and implementing effective mental health interventions will be
+                                instrumental in providing comprehensive care to our clients, ensuring that their emotional and
+                                psychological needs are met alongside their physical health requirements.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -172,7 +198,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
