--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -77,7 +77,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -113,18 +113,18 @@
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1">
-                    <img class="img-fluid" src="img/carousel-1.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-1.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="1" aria-label="Slide 2">
-                    <img class="img-fluid" src="img/carousel-2.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-2.jpg" alt="Image">
                 </button>
                 <button type="button" data-bs-target="#header-carousel" data-bs-slide-to="2" aria-label="Slide 3">
-                    <img class="img-fluid" src="img/carousel-3.jpg" alt="Image">
+                    <img class="img-fluid" src="img/carousel/carousel-3.jpg" alt="Image">
                 </button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
                             Firm Foundation LLC
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
                             Firm Foundation LLC
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel/carousel-3.jpg" alt="Image">
                     <div class="carousel-caption">
                         <h1 class="display-2 text-uppercase text-white mb-4 animated zoomIn">
                             Firm Foundation LLC
@@ -157,7 +157,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid pt-6 pb-6">
+    <div class="container-fluid py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -209,7 +209,7 @@
                         <h5 class="lh-base text-uppercase mb-0">Our commitment is deep-rooted in providing a diverse
                             population.</h4>
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill py-3 px-4">Read More</a>
+                    <a href="about/about-firm-foundation.html" class="btn btn-primary rounded-pill py-3 px-4">Read More</a>
                 </div>
             </div>
         </div>
@@ -217,62 +217,8 @@
     <!-- About End -->
 
 
-    <!-- Features Start -->
-    <div class="container-fluid pt-6 pb-6">
-        <div class="container pt-4">
-            <div class="row g-0 feature-row wow fadeIn" data-wow-delay="0.1s">
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
-                    <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
-                            <i class="fa fa-stethoscope fa-2x text-white"></i>
-                        </div>
-                        <div class="p-5 pt-0">
-                            <h5 class="text-uppercase mb-3">Holistic Approach</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.4s">
-                    <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
-                            <i class="fa fa-dollar-sign fa-2x text-white"></i>
-                        </div>
-                        <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Clear Pricing</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
-                    <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
-                            <i class="fa fa-procedures fa-2x text-white"></i>
-                        </div>
-                        <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Quality Care</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.6s">
-                    <div class="feature-item border h-100">
-                        <div class="feature-icon btn-xxl-square bg-primary mb-4 mt-n4">
-                            <i class="fa fa-user-md fa-2x text-white"></i>
-                        </div>
-                        <div class="p-5 pt-0">
-                            <h5 class="text-uppercase">Reliable Support</h5>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tellus augue.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Features End -->
-
-
     <!-- Service Start -->
-    <div class="container-fluid service pt-3 pb-1">
+    <div class="container-fluid service py-5 bg-grey">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h1 class="display-6 text-uppercase mb-5">Our Expert Services</h1>
@@ -387,22 +333,23 @@
 
 
     <!-- Appointment Start -->
-    <div class="container-fluid appoinment mt-6 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid appoinment py-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container pt-5">
             <div class="row gy-5 gx-0">
                 <div class="col-lg-6 pe-lg-5 wow fadeIn" data-wow-delay="0.3s">
                     <h1 class="display-6 text-uppercase text-white mb-4">Talk To Us
                     </h1>
-                    <p class="text-white mb-5 wow fadeIn" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur
-                        adipiscing elit. Curabitur tellus
-                        augue, iaculis id elit eget, ultrices pulvinar tortor.</p>
+                    <p class="text-white mb-5 wow fadeIn" data-wow-delay="0.4s">
+                        We're here to listen and help you on your health journey. Please use 
+                        the space below to tell us a little more about why you're visiting us.
+                    </p>
                     <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.5s">
                         <div class="btn-lg-square bg-white">
                             <i class="bi bi-geo-alt text-dark fs-3"></i>
                         </div>
                         <div class="ms-3">
                             <h6 class="text-white text-uppercase">Office Address</h6>
-                            <span class="text-white">123 Street, New York, USA</span>
+                            <span class="text-white">766 South State Street, Dover, DE 19901</span>
                         </div>
                     </div>
                     <hr class="bg-body">
@@ -418,7 +365,7 @@
                 </div>
                 <div class="col-lg-6 mb-n5 wow fadeIn" data-wow-delay="0.7s">
                     <div class="bg-white p-5">
-                        <h2 class="text-uppercase mb-4">Online Appoinment</h2>
+                        <h2 class="text-uppercase mb-4">Appointment Form</h2>
                         <div class="row g-3">
                             <div class="col-sm-12">
                                 <div class="form-floating">
@@ -467,7 +414,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
