--- a/our-contact.html
+++ b/our-contact.html
@@ -51,10 +51,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -77,7 +77,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -95,7 +95,7 @@
                         </div>
                         <a href="our-services.html" class="nav-item nav-link">Services</a>
                         <a href="our-membership.html" class="nav-item nav-link">Membership</a>
-                        <a href="#" class="nav-item nav-link active">Contact</a>
+                        <a href="our-contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
                         <a href="#" class="btn btn-primary rounded-pill py-2 px-3">Book Appointment</a>
@@ -134,13 +134,14 @@
             <div class="container pt-5">
                 <div class="row gy-5 gx-0">
                     <div class="col-lg-6 pe-lg-5 wow fadeIn" data-wow-delay="0.3s">
-                        <h1 class="display-6 text-uppercase text-white mb-4">Have Any Query? Feel Free To Contact Us
+                        <h1 class="display-6 text-uppercase text-white mb-4">Have Any Questions? Feel Free To Talk To Us
                         </h1>
                         <p class="text-white mb-5 wow fadeIn" data-wow-delay="0.4s">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda cumque 
-                            excepturi non voluptates nam, iusto incidunt modi distinctio 
-                            iste sed veritatis facere ea nesciunt veniam.
-                            </p>
+                            If you have any questions or need further information, please don't hesitate to reach out to us.
+                            Our team is here to assist you with any inquiries you may have regarding our services,
+                            membership options or general information about Firm Foundation LLC. We look forward to hearing
+                            from you and providing the support you need.
+                        </p>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.5s">
                             <div class="btn-lg-square bg-white">
                                 <i class="bi bi-envelope-at text-dark fs-3"></i>
@@ -207,7 +208,7 @@
         </div>
         <div class="container-fluid px-0 wow fadeInUp" data-wow-delay="0.5s">
             <iframe class="w-100 h-100"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3094.1729548895983!2d-75.52530812405112!3d39.148047671671584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c76353ce5a3f39%3A0xea15d6f76083dc5e!2s766%20S%20State%20St%2C%20Dover%2C%20DE%2019904%2C%20USA!5e0!3m2!1sen!2sgh!4v1753970432123!5m2!1sen!2sgh"
             frameborder="0" style="min-height: 500px; border:0;" allowfullscreen="" aria-hidden="false"
             tabindex="0"></iframe>
         </div>
@@ -221,7 +222,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
