--- a/our-membership.html
+++ b/our-membership.html
@@ -51,10 +51,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -77,7 +77,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <a href="our-services.html" class="nav-item nav-link">Services</a>
-                        <a href="#" class="nav-item nav-link active">Membership</a>
+                        <a href="our-membership.html" class="nav-item nav-link active">Membership</a>
                         <a href="our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
@@ -152,7 +152,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
