--- a/our-services.html
+++ b/our-services.html
@@ -51,10 +51,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="index.html">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -77,7 +77,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                 <a href="index.html" class="navbar-brand d-lg-none">
-                    <img src="img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
                 </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
@@ -93,7 +93,7 @@
                                 <a href="about/our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
-                        <a href="#" class="nav-item nav-link active">Services</a>
+                        <a href="our-services.html" class="nav-item nav-link active">Services</a>
                         <a href="our-membership.html" class="nav-item nav-link">Membership</a>
                         <a href="our-contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -105,6 +105,7 @@
         </div>
     </div>
     <!-- Navbar End -->
+
 
 
     <!-- Page Header Start -->
@@ -234,7 +235,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/minor-procedure.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/anxiety-depression.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Anxiety & Depression Management</h5>
                             </div>
@@ -246,7 +247,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/dot-exams.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/birth-control.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Birth Control</h5>
                             </div>
@@ -258,7 +259,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/pap-smear.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/erectile-dysfunction.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Erectile Dysfunction Management</h5>
                             </div>
@@ -270,7 +271,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/obesity-management.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/hair-loss.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Hair Loss Management</h5>
                             </div>
@@ -282,7 +283,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/chronic-disease-management.jpg" alt="">
+                            <img class="img-fluid w-100" src="img/services/mental-health.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Mental Health and Counseling</h5>
                             </div>
@@ -294,7 +295,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/immigration-medical-exams.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/smoking-cessation.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Smoking Cessation Management</h5>
                             </div>
@@ -306,7 +307,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/asthma-management.png" alt="">
+                            <img class="img-fluid w-100" src="img/services/telemedicine.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Telemedicine</h5>
                             </div>
@@ -318,7 +319,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/screening.png " alt="">
+                            <img class="img-fluid w-100" src="img/services/travel-clinic.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Travel Clinic</h5>
                             </div>
@@ -330,7 +331,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-item">
                         <div class="service-inner pb-5">
-                            <img class="img-fluid w-100" src="img/services/screening.png " alt="">
+                            <img class="img-fluid w-100" src="img/services/women-and-men-health.jpg" alt="">
                             <div class="service-text px-5 pt-4">
                                 <h5 class="text-uppercase">Women and Men's Health</h5>
                             </div>
@@ -350,104 +351,7 @@
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h1 class="display-6 text-uppercase mb-5">What People Are Saying About Our Services</h1>
-            </div>
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="testimonial-img">
-                        <div class="animated flip infinite">
-                            <img class="img-fluid" src="img/testimonial-1.jpg" alt="">
-                        </div>
-                        <div class="animated flip infinite">
-                            <img class="img-fluid" src="img/testimonial-2.jpg" alt="">
-                        </div>
-                        <div class="animated flip infinite">
-                            <img class="img-fluid" src="img/testimonial-3.jpg" alt="">
-                        </div>
-                        <div class="animated flip infinite">
-                            <img class="img-fluid" src="img/testimonial-4.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="owl-carousel testimonial-carousel">
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <img class="img-fluid" src="img/testimonial-1.jpg" alt="">
-                                <div class="ms-3">
-                                    <div class="mb-2">
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                    </div>
-                                    <h5 class="text-uppercase">Client Name</h5>
-                                    <span>Profession</span>
-                                </div>
-                            </div>
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore
-                                lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <img class="img-fluid" src="img/testimonial-2.jpg" alt="">
-                                <div class="ms-3">
-                                    <div class="mb-2">
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                    </div>
-                                    <h5 class="text-uppercase">Client Name</h5>
-                                    <span>Profession</span>
-                                </div>
-                            </div>
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore
-                                lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <img class="img-fluid" src="img/testimonial-3.jpg" alt="">
-                                <div class="ms-3">
-                                    <div class="mb-2">
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                    </div>
-                                    <h5 class="text-uppercase">Client Name</h5>
-                                    <span>Profession</span>
-                                </div>
-                            </div>
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore
-                                lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                            </p>
-                        </div>
-                        <div class="testimonial-item">
-                            <div class="d-flex align-items-center mb-4">
-                                <img class="img-fluid" src="img/testimonial-4.jpg" alt="">
-                                <div class="ms-3">
-                                    <div class="mb-2">
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                        <i class="far fa-star text-primary"></i>
-                                    </div>
-                                    <h5 class="text-uppercase">Client Name</h5>
-                                    <span>Profession</span>
-                                </div>
-                            </div>
-                            <p class="fs-5">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore
-                                lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                <h2 class="text-uppercase mb-4">Coming Soon</h2>
             </div>
         </div>
     </div>
@@ -460,7 +364,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
