--- a/services/telemedicine.html
+++ b/services/telemedicine.html
@@ -52,10 +52,10 @@
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <a href="../index.html">
-                    <img src="../img/logo/firm-foundation-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                    <img src="../img/logo/ff-logo-white.png" alt="Logo" class="img-fluid" style="width: 100px;">
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>766 South State street, Dover, DE 19901</small>
                     <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
                     <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
                     <div class="ms-3 d-flex">
@@ -77,7 +77,9 @@
     <div class="container-fluid bg-white sticky-top wow fadeIn" data-wow-delay="0.1s">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
-                <a href="../index.html" class="navbar-brand d-lg-none"></a>
+                <a href="../index.html" class="navbar-brand d-lg-none">
+                    <img src="../img/logo/ff-logo.png" alt="Logo" class="img-fluid" style="height: 100px;">
+                </a>
                 <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse"
                     data-bs-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
@@ -88,8 +90,8 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu bg-light rounded-0 rounded-bottom m-0">
-                                <a href="../about/about-firm-foundation.html" class="dropdown-item">Firm Foundation LLC</a>
-                                <a href="../about/our-team.html" class="dropdown-item">Our Team</a>
+                                <a href="#" class="dropdown-item">Firm Foundation LLC</a>
+                                <a href="our-team.html" class="dropdown-item">Our Team</a>
                             </div>
                         </div>
                         <a href="../our-services.html" class="nav-item nav-link active">Services</a>
@@ -151,7 +153,7 @@
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <h5 class="text-uppercase text-light mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>766 South State Street, Dover, DE 19901</p>
                     <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
                     <div class="d-flex pt-3">
